<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="Ana Sayfa" />
        <item
            android:id="@+id/nav_parking"
            android:title="@string/find_parking" />
        <item
            android:id="@+id/nav_applications"
            android:title="@string/applications" />
        <item
            android:id="@+id/nav_istmarin"
            android:title="@string/istmarin_panel" />
        <item
            android:id="@+id/nav_payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_solution_center"
            android:title="@string/solution_center" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/news_tag" />
        <item
            android:id="@+id/nav_campaigns"
            android:title="@string/campaigns" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
    </group>

</menu>